# heterogeneous_planning_control

./: .gitignore  README.md  arduinoserial.py  consequetive.py  controller.py  model.py  package.xml  planner.py  rosperipheral.py  setup.py
arduino_files/: coils.cpp
helmholtz_arduino/: arduinoserial.h  coils.cpp  coils.h  helmholtz_arduino.ino  helmholtz_arduino_ros.ino
launch/: camera.launch.py  serial.launch.py
swarm/: .gitignore  closedloop.py  consequetive.py  controller.py  leg_length.py  localization.py  model.py  planner.py  rosclosed.py  rosopen.py  rosperipheral.py
swarm/helmholtz_arduino/: coils.cpp  coils.h  helmholtz_arduino.ino
swarm/helmholtz_arduino/coil_test/: coil_test.ino  coils.h  v2.0-SDC2160S-20220823-helmholtz.cpr
swarm/paper/: model_simple.py  process_frame.py
